--- a/CONTENTIEUX_TF/Cours_tex/Chap3.tex
+++ b/CONTENTIEUX_TF/Cours_tex/Chap3.tex
@@ -18,142 +18,271 @@ la résolution des litiges. La phase juridictionnelle n’intervient qu’en cas
 procédure administrative, laquelle demeure la voie normale et privilégiée de
 règlement des différends fiscaux.
 
-\section{Le principe du préalable administratif}
+\section{Le principe du "Préalable Administratif Obligatoire" (RAPO)}
 
-\subsection{Fondement juridique}
+Le contentieux fiscal se caractérise par une architecture procédurale originale qui déroge au droit commun de la responsabilité administrative. La pierre angulaire de cet édifice est le principe du \textbf{Recours Administratif Préalable Obligatoire (RAPO)}. Cette règle, loin d'être une simple formalité bureaucratique, constitue une garantie substantielle tant pour l'Administration que pour le contribuable.
 
-Le principe du préalable administratif constitue l’un des fondements essentiels du
-contentieux fiscal. En droit togolais, il est consacré par le Livre des procédures
-fiscales, notamment par l’article 367, aux termes duquel toute contestation relative à
-une imposition doit, à peine d’irrecevabilité, être précédée d’une réclamation
-adressée à l’administration fiscale compétente.
+\subsection{Fondement juridique : Le privilège du préalable}
+En droit fiscal togolais, comme dans la plupart des systèmes juridiques d'inspiration francophone, le contribuable ne peut jamais saisir directement le juge de l'impôt.
 
-Ce principe s’applique pleinement aux taxes foncières, qu’il s’agisse de contestations
-portant sur l’assiette, la liquidation ou, dans certaines hypothèses, le recouvrement
-de l’impôt. Il traduit la volonté du législateur de confier à l’administration fiscale la
-mission première de corriger ses propres erreurs avant toute intervention du juge.
+\begin{itemize}
+	\item \textbf{Le texte de référence :} Le Livre des Procédures Fiscales (LPF), notamment par l’article 367, pose le principe selon lequel toute contestation relative à l'assiette ou au recouvrement des impôts, taxes, droits et redevances doit être \textit{« adressée à l'autorité administrative compétente »} avant toute instance juridictionnelle.
+	
+	\item \textbf{La nature juridique :} Il s'agit d'une \textbf{fin de non-recevoir d'ordre public}. Cela signifie que si un contribuable assigne directement l'OTR devant le Tribunal sans avoir déposé de réclamation préalable, le juge a l'obligation de rejeter la demande sans même l'examiner au fond (irrecevabilité \textit{in limine litis}), et ce, même si l'Administration ne soulève pas cette exception.
+\end{itemize}
 
-\subsection{Portée et justification}
+\subsection{Justification téléologique : La fonction de "filtre"}
+La doctrine administrative justifie ce verrouillage de l'accès au juge par trois impératifs majeurs, particulièrement pertinents en matière de fiscalité foncière :
 
-Le préalable administratif présente une double justification. D’une part, il permet à
-l’administration fiscale de réexaminer l’imposition contestée à la lumière des
-arguments du contribuable et, le cas échéant, de procéder à un dégrèvement sans
-recours juridictionnel. D’autre part, il contribue à désengorger les juridictions en
-limitant les contentieux portés devant le juge aux seuls litiges n’ayant pu être réglés
-au stade administratif.
+\begin{enumerate}
+	\item \textbf{Le pouvoir de rectification de l'Administration (Le droit à l'erreur) :} \\
+	L'administration fiscale gère des milliers de cotes foncières basées sur des données cadastrales complexes. L'erreur matérielle est inévitable (erreur de saisie, homonymie, confusion de parcelle). Le préalable administratif offre à l'Administration la possibilité de corriger elle-même ses propres erreurs, rapidement et sans formalisme excessif. C'est une phase d'\textit{audit interne provoqué}.
+	
+	\item \textbf{Le désengorgement des prétoires (Économie de procédure) :} \\
+	Les statistiques démontrent que l'immense majorité des litiges fiscaux (plus de 90 \% dans les systèmes comparables) se résolvent au stade de la réclamation préalable. Sans ce filtre, les tribunaux administratifs seraient submergés par des contestations purement techniques (ex: métrage d'une terrasse) qui ne nécessitent pas l'intervention d'un magistrat.
+	
+	\item \textbf{La cristallisation du litige :} \\
+	La réclamation préalable permet de figer le cadre du débat. Les moyens (arguments) que le contribuable pourra soulever devant le juge seront limités par la nature de ceux exposés dans sa réclamation initiale. Cela évite les demandes nouvelles imprévisibles devant le tribunal, garantissant ainsi la loyauté des débats (principe de l'\textit{immutabilité de l'instance}).
+\end{enumerate}
 
-Dans le domaine des taxes foncières, ce principe revêt une portée particulière en
-raison de la technicité des éléments d’assiette. La phase administrative permet
-souvent de résoudre le litige par une simple vérification cadastrale ou une correction
-matérielle, sans qu’il soit nécessaire de saisir le juge.
+\subsection{Spécificité du contentieux cadastral}
+Pour le cadre du Cadastre, ce principe revêt une importance particulière. Contrairement à d'autres impôts (TVA, IS) qui reposent sur la comptabilité et l'interprétation du droit, la taxe foncière est un \textbf{impôt indiciaire}. Le litige porte souvent sur des faits matériels (la maison est-elle finie ? quelle est la surface réelle ?).
+
+\begin{itemize}[label=\tiny$\blacksquare$]
+	\item \textbf{Conséquence pratique :} Le préalable administratif est le moment privilégié pour l'expertise technique (visite des lieux, mesurage contradictoire). Il permet de confronter la réalité du terrain aux données du Système d'Information Foncier (SIF) avant toute judiciarisation. C'est à ce stade que l'expert géomètre de l'OTR joue son rôle de \textit{« juge technique »} de première instance.
+\end{itemize}
+
 
 \section{La réclamation contentieuse préalable}
 
-La réclamation contentieuse constitue l’acte par lequel le contribuable saisit
-l’administration fiscale d’une contestation portant sur une imposition déterminée.
-Elle ouvre formellement la procédure contentieuse administrative.
+L'acte introductif d'instance dans la phase administrative est la réclamation. Bien plus qu'une simple lettre de doléances, la réclamation contentieuse est un \textbf{acte juridique formel} qui obéit à un régime strict de recevabilité. Sa validité est conditionnée par le respect cumulatif de règles de délai, de forme et de capacité.
 
-\subsection{Conditions de délai}
+\subsection{Les conditions de délai : La forclusion}
+En droit fiscal, les délais de recours sont des délais préfix, c'est-à-dire des délais de rigueur dont l'expiration entraîne l'extinction du droit d'agir (la forclusion). Cette déchéance est d'ordre public et peut être soulevée d'office par l'Administration ou le Juge.
 
-La réclamation contentieuse doit être présentée dans les délais prévus par le Livre
-des procédures fiscales. Le non-respect de ces délais entraîne l’irrecevabilité de la
-réclamation, sauf exceptions prévues par la loi, notamment en cas de dégrèvement
-d’office.
+\begin{itemize}
+	\item \textbf{Le délai général (R+1) :} \\
+	En matière d'impôts directs locaux (TFPB, TFPNB), le délai de réclamation expire le \textbf{31 décembre de l'année suivant} celle de la mise en recouvrement du rôle.
+	\textit{Exemple : Pour un avis d'imposition reçu en mars 2025 (Rôle 2025), la réclamation est recevable jusqu'au 31 décembre 2026.}
+	
+	\item \textbf{Le délai spécial (L'événement motivant la réclamation) :} \\
+	Lorsque le contribuable n'a pas reçu d'avis initial ou lorsqu'un événement postérieur vient modifier la situation juridique du bien (ex : une décision de justice reconnaissant qu'un terrain appartient à autrui), le délai court à compter de la date de cet événement.
+	
+	\item \textbf{La date faisant foi :} \\
+	C'est la date de réception par l'Administration qui fait foi (cachet du service courrier de l'OTR) et non la date de rédaction.
+\end{itemize}
 
-Les délais de réclamation sont strictement encadrés afin d’assurer la sécurité
-juridique des impositions et la stabilité des recettes publiques. En matière foncière,
-ces délais commencent généralement à courir à compter de la mise en recouvrement
-de la taxe ou de la notification de l’avis d’imposition.
+\subsection{Les conditions de forme : Le formalisme ad validitatem}
+Le contentieux fiscal n'admet pas de réclamation orale. Le formalisme demeure une condition de validité substantielle.
 
-\subsection{Conditions de forme}
+\begin{enumerate}
+	\item \textbf{L'exigence de l'écrit signé :} \\
+	La réclamation doit être manuscrite ou dactylographiée. L'élément crucial est la \textbf{signature manuscrite} de l'auteur. Une réclamation non signée est considérée comme inexistante juridiquement, bien qu'elle soit régularisable sur demande de l'Administration.
+	
+	\begin{itemize}[label=\tiny$\blacksquare$]
+		\item \textbf{Précision :} La jurisprudence administrative considère que le défaut de signature est une irrégularité régularisable. L'administration doit inviter le contribuable à signer avant de rejeter.
+	\end{itemize}
+	
+	\item \textbf{L'identification de l'imposition :} \\
+	Le réclamant doit mentionner explicitement l'impôt contesté (Nature, Année d'imposition) et joindre obligatoirement l'\textbf{Avis de Mise en Recouvrement (AMR)} ou une copie de l'avis d'imposition. Cette pièce est capitale pour permettre au service de lier le contentieux à une cote précise.
+	
+	\item \textbf{L'exposé sommaire des moyens :} \\
+	Le contribuable ne peut se contenter de dire « Je conteste ». Il doit articuler des moyens de fait ou de droit :
+	\begin{itemize}
+	\item Les moyens de fait : (ex : « La superficie bâtie n'est pas de 200m² mais de 150m² »).
+	
+	\item  Les moyens de droit : (ex : « Violation de l'article X du CGI sur l'exonération des bâtiments agricoles »).
+\end{itemize}
 
-La réclamation doit respecter certaines conditions de forme pour être recevable.
-Elle doit être formulée par écrit, contenir l’identification précise du contribuable,
-désigner l’imposition contestée et exposer de manière claire les moyens de fait et de
-droit invoqués à l’appui de la contestation.
+\begin{itemize}[label=\tiny$\blacksquare$]
+	
+	\item  Note : En matière foncière, les moyens sont majoritairement factuels, nécessitant souvent l'intervention de l'expert géomètre.
+	
+\end{itemize}
+	
+\end{enumerate}
 
-En matière de taxes foncières, la réclamation est souvent accompagnée de pièces
-justificatives d’ordre cadastral ou foncier, telles que des plans, des titres de
-propriété, des constats de superficie ou des attestations d’usage.
+\subsection{La qualité et l'intérêt à agir}
 
-\subsection{Qualité du réclamant}
+La recevabilité de la réclamation est subordonnée à la légitimité de son auteur (Règle : \textit{Nul ne plaide par procureur}).
 
-La réclamation contentieuse doit être présentée par une personne ayant qualité pour
-agir. Il s’agit en principe du redevable légal de la taxe foncière, c’est-à-dire du
-propriétaire ou de toute autre personne désignée par la loi comme redevable.
+\begin{enumerate}
 
-La réclamation peut également être présentée par un représentant légal ou un
-mandataire dûment habilité. L’absence de qualité du réclamant constitue une cause
-d’irrecevabilité de la demande.
+\item  \textbf{Le redevable légal :}\\
+Seule la personne au nom de laquelle l'impôt est établi (inscrite au rôle) a qualité pour réclamer.
 
-\subsection{Effets juridiques de la réclamation}
+\begin{itemize}[label=\tiny$\blacksquare$]
+\item \textbf{ Problématique de l'indivision :} En cas d'indivision successorale, un seul co-indivisaire peut valablement présenter une réclamation pour le compte de l'ensemble de l'indivision (mandat tacite de gestion).
+\end{itemize}
 
-La présentation d’une réclamation contentieuse produit des effets juridiques
-importants. Elle oblige l’administration fiscale à procéder à l’instruction de la
-demande et à statuer par une décision expresse ou implicite.
+\item  \textbf{Le mandat de représentation :} \\
+Si le contribuable ne souhaite pas agir personnellement, il peut se faire représenter par un mandataire (avocat, expert-comptable, géomètre-expert, ou un tiers).
 
-Toutefois, la réclamation n’a pas, en principe, d’effet suspensif sur le recouvrement
-de l’impôt, sauf lorsque le contribuable sollicite et obtient un sursis de paiement dans
-les conditions prévues par la loi.
+\begin{itemize}[label=\tiny$\blacksquare$]
+\item  \textbf{Mandat spécial :} Pour les tiers non-avocats, la production d'un mandat spécial rédigé et signé par le contribuable est obligatoire à peine d'irrecevabilité. Pour les avocats, le mandat est présumé (ad litem).
+\end{itemize}
+
+\end{enumerate}
+
+\subsection{Les effets juridiques de la réclamation}
+Le dépôt d'une réclamation régulière produit deux effets majeurs en droit:
+
+\begin{itemize}[label=\tiny$\blacksquare$]
+	\item \textbf{L'effet interruptif de prescription :} La réclamation interrompt la prescription quadriennale. Elle ouvre une phase d'instruction administrative durant laquelle les délais de recouvrement sont suspendus.
+	
+	\item \textbf{L'absence d'effet suspensif de paiement (Principe du "Payer d'abord, discuter ensuite"): } 
+   C'est une règle cardinale du droit fiscal : \textbf{la réclamation ne suspend pas l'exigibilité de l'impôt}. Le comptable public est en droit de poursuivre le recouvrement forcé (saisie) même si une réclamation est en cours d'instruction, sauf si le contribuable a expressément formulé une demande de\textbf{ sursis de paiement assortie de garanties} (Voir Section 6).
+\end{itemize}
+
 
 \section{L’instruction de la réclamation en la forme}
+L'instruction de la réclamation constitue la phase centrale du contentieux administratif. Elle ne saurait être réduite à une simple vérification bureaucratique. Juridiquement, il s'agit d'une procédure administrative interne, \textbf{inquisitoire et contradictoire}, durant laquelle l'Administration a l'obligation d'examiner les griefs du contribuable.
 
-L’instruction en la forme constitue la première étape de l’examen de la réclamation
-par l’administration fiscale. Elle vise à vérifier si la demande remplit les conditions
-légales de recevabilité.
+Cette phase se décompose en deux temps procéduraux distincts : le contrôle de recevabilité (la forme) et l'examen du bien-fondé (le fond).
 
-\subsection{Vérification de la recevabilité}
+\subsection{Le contrôle liminaire de recevabilité (L'instruction en la forme)}
 
-L’administration fiscale procède à la vérification du respect des délais, de la qualité
-du réclamant et des conditions formelles de la réclamation. Cette vérification est
-préalable à tout examen au fond.
+L'instruction d'une réclamation contentieuse commence systématiquement par une phase de « filtrage juridique ». Avant même d'examiner si le contribuable a raison sur le fond (ex: erreur de superficie), l'Administration doit vérifier s'il a le \textbf{droit d'agir}.
 
-En matière de taxes foncières, cette phase permet également de s’assurer que la
-réclamation porte bien sur une imposition déterminée et qu’elle relève de la
-compétence de l’administration saisie.
+Ce contrôle de recevabilité est une étape d'ordre public : l'Administration a l'obligation de la mener, et le juge administratif la vérifiera d'office en cas de recours ultérieur.
 
-\subsection{Demande de régularisation}
+\subsubsection{Les points de contrôle (La « Check-list » de recevabilité)}
 
-Lorsque la réclamation présente des irrégularités susceptibles d’être corrigées,
-l’administration peut inviter le contribuable à régulariser sa demande dans un délai
-déterminé. Cette faculté participe au respect du principe du contradictoire et vise à
-éviter les irrecevabilités purement formelles.
+L'agent chargé de l'instruction (souvent à la Division du Contentieux ou au Service Cadastre pour pré-instruction) doit passer la demande au crible de cinq critères cumulatifs. Le défaut d'un seul de ces critères peut entraîner le rejet.
 
-\subsection{Irrecevabilité et rejet}
+\begin{enumerate}
+	\item \textbf{Le contrôle du délai (La temporalité) :} \\
+	C'est le premier point à vérifier. Le délai de réclamation (généralement jusqu'au 31 décembre de l'année N+1 suivant la mise en recouvrement) est un \textbf{délai préfix}.
+	\begin{itemize}
+		\item \textit{Règle :} Une réclamation déposée hors délai est frappée de \textbf{forclusion}. Aucune excuse (ignorance de la loi, absence du pays, maladie simple) ne permet de relever cette forclusion, sauf cas de force majeure avérée et très strictement interprétée.
+		\item \textit{Pratique :} L'agent vérifie la date du cachet de la poste ou celle de l'accusé de réception du service courrier de l'OTR.
+	\end{itemize}
+	
+	\item \textbf{Le contrôle de la qualité (La légitimité) :}
+	\begin{itemize}
+		\item \textit{Identité :} Le réclamant est-il bien celui qui est inscrit au rôle ? (Attention aux homonymies).
+		\item \textit{Capacité :} Si le réclamant est une société, le signataire a-t-il le pouvoir de l'engager (Gérant, DG) ?
+		\item \textit{Représentation :} Si la réclamation est signée par un tiers (géomètre privé, expert-comptable, neveu...), un \textbf{mandat régulier} est-il joint ? Seuls les avocats sont dispensés de présenter ce mandat.
+	\end{itemize}
+	
+	\item \textbf{Le contrôle de la forme (L'écrit et la signature) :} \\
+	Le contentieux fiscal est une procédure écrite.
+	\begin{itemize}
+		\item Une demande par téléphone ou une simple visite au bureau ne constitue pas une réclamation valable.
+		\item \textbf{La signature manuscrite} est une condition substantielle. Une lettre dactylographiée non signée n'a pas d'existence juridique.
+	\end{itemize}
+	
+	\item \textbf{Le contrôle de la motivation (L'exposé des moyens) :} \\
+	La réclamation doit être \textbf{motivée}. Une lettre qui se bornerait à dire « \textit{Je refuse de payer cet impôt trop cher} » sans avancer d'argument factuel (erreur de base) ou juridique (mauvaise application de la loi) est irrecevable pour défaut de motivation.
+	\begin{itemize}
+		\item \textit{En matière foncière :} Le contribuable doit préciser ce qu'il conteste (la surface, le classement, l'affectation).
+	\end{itemize}
+	
+	\item \textbf{La production de l'acte contesté (L'identification) :} \\
+	La demande doit permettre d'identifier l'imposition. L'usage impose de joindre l'\textbf{Avis de Mise en Recouvrement (AMR)} ou l'avis d'imposition foncière. L'absence de référence à une cote précise rend la réclamation inopérante.
+\end{enumerate}
 
-À défaut de régularisation ou lorsque les conditions de recevabilité ne sont pas
-remplies, l’administration prononce l’irrecevabilité de la réclamation. Cette décision
-doit être notifiée au contribuable et motivée.
+\subsubsection{La gestion des irrégularités : Distinction fondamentale}
 
-\section{L’instruction de la réclamation au fond}
+Face à une réclamation incomplète ou mal formulée, l'attitude de l'Administration diffère selon la nature du vice. C'est une distinction cruciale pour la protection des droits du contribuable.
 
-Lorsque la réclamation est recevable, l’administration procède à son instruction au
-fond. Cette phase constitue le cœur de la mission contentieuse.
+\begin{description}
+	\item[Les vices non régularisables (Rejet immédiat)] \hfill \\
+	Certaines irrégularités sont définitives et ne peuvent être corrigées après coup.
+	\begin{itemize}
+		\item \textit{Cas type :} \textbf{La tardiveté}. Si le délai est expiré au moment du dépôt, l'Administration constate la forclusion et rejette la demande \textit{in limine litis} (dès le seuil). Aucune régularisation n'est possible.
+	\end{itemize}
+	
+	\item[Les vices régularisables (Invitation à corriger)] \hfill \\
+	Pour les autres vices de forme, l'Administration a un \textbf{devoir de loyauté}. Elle ne doit pas rejeter la demande immédiatement (ce qui serait un piège), mais inviter le contribuable à la régulariser.
+	\begin{itemize}
+		\item \textit{Exemples :} Oubli de signature, absence du mandat, oubli de la pièce jointe (avis d'imposition).
+		\item \textit{Procédure :} Le service envoie une \textbf{Demande de régularisation} en accordant un délai (ex: 30 jours) au contribuable pour compléter son dossier.
+		\item \textit{Sanction :} Ce n'est qu'à l'expiration de ce délai supplémentaire, si le contribuable reste silencieux, que le rejet pour vice de forme est prononcé.
+	\end{itemize}
+\end{description}
 
-\subsection{Vérification juridique}
 
-L’instruction au fond implique une analyse juridique de la contestation, afin de
-vérifier la conformité de l’imposition aux dispositions du Code général des impôts et
-du Livre des procédures fiscales. Il s’agit notamment de contrôler l’application des
-taux, des exonérations et des règles d’assiette.
 
-\subsection{Vérification technique cadastrale}
+\subsubsection{Conséquence pratique pour le service du Cadastre}
 
-En matière de taxes foncières, l’instruction au fond comporte une dimension
-technique essentielle. Les services du cadastre, intégrés à la Direction du Cadastre et
-de la Conservation Foncière de l’Office Togolais des Recettes, sont sollicités pour
-vérifier les éléments matériels de l’imposition.
+Bien que l'instruction juridique relève souvent du service contentieux, le cadre du Cadastre est souvent le premier point de contact. Il doit être capable de réaliser un \textbf{pré-contrôle} :
 
-Cette vérification peut porter sur la superficie, l’usage, la catégorie cadastrale ou
-l’état d’achèvement de l’immeuble. Elle constitue un élément déterminant de la
-décision administrative.
+\begin{itemize}[label=\tiny$\blacksquare$]
+	\item Si un usager apporte une réclamation non signée, l'agent du Cadastre doit lui faire signer immédiatement au guichet.
+	\item Si un usager conteste une taxe vieille de 5 ans, l'agent doit l'informer (avec pédagogie) du risque élevé de rejet pour forclusion, tout en acceptant le dépôt (car seul le chef de service a compétence pour signer le rejet).
+\end{itemize}
 
-\subsection{Enquêtes, visites et contrôles}
+\subsection{L'instruction au fond : L'expertise technique cadastrale}
 
-Lorsque les éléments du dossier le justifient, l’administration peut procéder à des
-enquêtes, des visites sur place ou des contrôles afin de constater la réalité des faits
-allégués par le contribuable. Ces opérations doivent être conduites dans le respect
-des garanties procédurales prévues par la loi.
+Une fois la réclamation déclarée recevable en la forme, s'ouvre la phase d'instruction au fond. En matière de fiscalité foncière, contrairement à la fiscalité d'entreprise qui est comptable, l'instruction est essentiellement \textbf{physique et matérielle}. Elle consiste à confronter les énonciations de la matrice cadastrale à la réalité du terrain.
+
+\subsubsection{La répartition de la charge de la preuve}
+
+Dans le contentieux de l'assiette, la règle de principe est celle du droit commun : \textit{Actori incumbit probatio} (la charge de la preuve incombe au demandeur).
+
+\begin{enumerate}
+	\item \textbf{La présomption de régularité du rôle :} \\
+	L'imposition émise par l'Administration est présumée exacte. C'est au contribuable qui la conteste d'apporter la preuve de son caractère erroné.
+	
+	\item \textbf{Le rôle actif de l'Administration (L'instruction inquisitoire) :} \\
+	Cependant, cette charge de la preuve est aménagée. Le contribuable n'a souvent pas accès aux éléments techniques de calcul (fiches d'évaluation). Dès lors, l'Administration a le devoir de vérifier ses propres bases. Si le contribuable apporte un « commencement de preuve » (ex : un plan de géomètre privé contradictoire), l'Administration est tenue de procéder à une contre-expertise.
+\end{enumerate}
+
+\subsubsection{La vérification sur pièces (Le contrôle de bureau)}
+
+Avant tout déplacement, le service du Cadastre saisi pour avis technique procède à un audit documentaire dans le Système d'Information Foncier (SIF) :
+
+\begin{itemize}
+	\item \textbf{Analyse de la Fiche d'Évaluation :} L'agent vérifie si les éléments déclarés ou recensés correspondent à la catégorie taxée.
+	\textit{Exemple d'erreur détectable au bureau : Une parcelle taxée comme « Bâtie » alors que la mise à jour des images satellitaires montre un terrain vide.}
+	
+	\item \textbf{Vérification des calculs :} Contrôle de l'application correcte des tarifs au m² selon la zone (Zone administrative, résidentielle, périphérie) et vérification arithmétique de la surface pondérée.
+\end{itemize}
+
+\subsubsection{L'expertise terrain : Le constat contradictoire}
+
+C'est l'acte central de l'instruction foncière. Lorsque le désaccord persiste sur la consistance du bien, une descente sur les lieux est indispensable.
+
+\begin{enumerate}
+	\item \textbf{Le fondement juridique (Droit de visite) :} \\
+	Les agents assermentés du Cadastre disposent d'un droit d'entrée dans les propriétés pour les besoins de l'évaluation fiscale (sous réserve des heures légales).
+	
+	\item \textbf{La méthodologie du « constat contradictoire » :} \\
+	Pour que le rapport d'expertise soit inattaquable devant le juge, l'opération doit être contradictoire.
+	\begin{itemize}
+		\item \textbf{Convocation :} Le contribuable est invité à être présent ou représenté.
+		\item \textbf{Le mesurage :} Prise de mesures des surfaces hors œuvre et habitables.
+		\item \textbf{Le recensement des éléments de confort (VLC) :} L'agent note la présence et l'état de fonctionnement des équipements (piscine, climatisation, ascenseur).
+		\item \textit{Point critique :} L'appréciation de la \textbf{vétusté}. L'agent doit évaluer si le coefficient de vétusté appliqué correspond à la dégradation réelle.
+	\end{itemize}
+	
+	\item \textbf{Le Rapport d'Expertise Cadastrale :} \\
+	À l'issue de la visite, l'agent rédige un rapport technique qui lie le service du contentieux sur les faits. Ce rapport doit contenir : la description précise de l'immeuble, un croquis coté, des photographies datées, et une conclusion technique claire.
+\end{enumerate}
+
+\subsubsection{Les paramètres techniques spécifiques au litige}
+
+L'instruction se concentre généralement sur trois variables d'ajustement de la Valeur Locative Cadastrale (VLC) :
+
+\begin{description}
+	\item[La classification (Le Standing)] \hfill \\
+	Le litige porte sur le classement (Luxe, Moyen, Économique). L'instructeur doit objectiver le classement en utilisant la grille de cotation officielle (matériaux, finitions).
+	
+	\item[L'affectation (L'Usage)] \hfill \\
+	Vérifier si l'usage réel correspond à l'usage déclaré (ex : villa d'habitation transformée en bureaux).
+	
+	\item[La pondération des surfaces] \hfill \\
+	Vérifier si les coefficients sont justifiés (ex : une terrasse couverte ne doit pas être comptée à 100 \% comme une pièce de vie).
+\end{description}
+
+\begin{center}
+	\fbox{\begin{minipage}{0.9\textwidth}
+			\textbf{Note pédagogique :} Insister sur l'importance des \textbf{photos} dans le dossier d'instruction. Devant la Commission de Recours ou le Juge, une photo vaut mieux qu'une longue description pour prouver la vétusté ou l'inachèvement d'un immeuble.
+	\end{minipage}}
+\end{center}
+
+
 
 \section{La décision administrative}
 
